local/logs/project.log
2019-08-07T18:49:37.669Z - normal: Load ~/.CocosCreator/settings.json
2019-08-07T18:49:39.187Z - normal: Initializing Asset Database
2019-08-07T18:49:39.227Z - normal: checking language setting...
2019-08-07T18:49:39.227Z - normal: Language: en
2019-08-07T18:49:42.658Z - success: preview server running at http://localhost:7456
2019-08-07T18:49:42.662Z - success: protocol editor-framework registered
2019-08-07T18:49:42.662Z - success: protocol app registered
2019-08-07T18:49:42.662Z - success: protocol theme registered
2019-08-07T18:49:42.662Z - success: protocol packages registered
2019-08-07T18:49:42.666Z - success: protocol uuid registerred
2019-08-07T18:49:42.666Z - success: protocol db registerred
2019-08-07T18:49:42.666Z - success: protocol thumbnail registerred
2019-08-07T18:49:42.666Z - success: protocol unpack registerred
2019-08-07T18:49:42.666Z - success: protocol disable-commonjs registerred
2019-08-07T18:49:44.138Z - normal: connected!
2019-08-07T18:49:44.142Z - normal: Check project D:\Proyecto\tallersoft
2019-08-07T18:49:44.146Z - normal: Initializing project D:\Proyecto\tallersoft
2019-08-07T18:49:45.395Z - normal: Initializing Cocos2d
2019-08-07T18:49:51.562Z - normal: Initializing engine extends
2019-08-07T18:49:51.887Z - success: asset-db-debugger loaded
2019-08-07T18:49:51.915Z - success: baidu-adapter loaded
2019-08-07T18:49:51.939Z - success: color-picker loaded
2019-08-07T18:49:52.316Z - success: fb-audience-network loaded
2019-08-07T18:49:52.506Z - success: fb-live-stream loaded
2019-08-07T18:49:52.562Z - success: google-play-instant loaded
2019-08-07T18:49:52.638Z - success: huawei-runtime loaded
2019-08-07T18:49:54.354Z - success: cpk-publish loaded
2019-08-07T18:49:54.363Z - success: jsb-adapter loaded
2019-08-07T18:49:54.419Z - success: oppo-runtime loaded
2019-08-07T18:49:54.439Z - success: package-manager loaded
2019-08-07T18:49:55.084Z - success: qqplay-adapter loaded
2019-08-07T18:49:55.108Z - success: runtime-dev-tools loaded
2019-08-07T18:49:55.144Z - success: sdkbox loaded
2019-08-07T18:49:55.176Z - success: tester loaded
2019-08-07T18:49:55.184Z - success: ui-grid loaded
2019-08-07T18:49:55.204Z - success: ui-kit-preview-extra loaded
2019-08-07T18:49:55.232Z - success: ui-kit-preview loaded
2019-08-07T18:49:55.236Z - success: ui-kit loaded
2019-08-07T18:49:55.256Z - success: ui-tree loaded
2019-08-07T18:49:55.330Z - success: vivo-runtime loaded
2019-08-07T18:49:55.334Z - success: weapp-adapter loaded
2019-08-07T18:49:55.342Z - success: xiaomi-adapter loaded
2019-08-07T18:49:55.509Z - success: assets loaded
2019-08-07T18:49:55.513Z - success: builder loaded
2019-08-07T18:49:56.431Z - success: cocos-services loaded
2019-08-07T18:49:56.447Z - success: console loaded
2019-08-07T18:49:56.551Z - success: fb-instant-games loaded
2019-08-07T18:49:56.563Z - success: game-window loaded
2019-08-07T18:49:56.567Z - success: google-instant-games loaded
2019-08-07T18:49:56.579Z - success: hierarchy loaded
2019-08-07T18:49:56.587Z - success: inspector loaded
2019-08-07T18:49:56.591Z - success: keystore loaded
2019-08-07T18:49:56.600Z - success: node-library loaded
2019-08-07T18:49:56.604Z - success: package-asset loaded
2019-08-07T18:49:56.608Z - success: preferences loaded
2019-08-07T18:49:56.612Z - success: project-exporter loaded
2019-08-07T18:49:56.616Z - success: project-importer loaded
2019-08-07T18:49:56.624Z - success: project-settings loaded
2019-08-07T18:49:56.632Z - success: scene loaded
2019-08-07T18:49:56.636Z - success: simulator-debugger loaded
2019-08-07T18:49:56.640Z - success: sprite-editor loaded
2019-08-07T18:49:56.648Z - success: store loaded
2019-08-07T18:49:56.660Z - success: timeline loaded
2019-08-07T18:49:56.671Z - success: xiaomi-runtime loaded
2019-08-07T18:50:01.550Z - normal: Loading packages
2019-08-07T18:50:01.562Z - normal: Watching packages
2019-08-07T18:50:03.160Z - normal: Run Application
2019-08-07T18:50:09.077Z - info: Cocos Services load base data!
2019-08-07T18:54:09.225Z - failed: [db-task][sync-changes] Failed to import asset D:\Proyecto\tallersoft\assets\Script\Game.js, message: Compile error: SyntaxError: D:/Proyecto/tallersoft/assets/Script/Game.js: Unexpected token, expected , (76:8)
  74 |             }
  75 |             
> 76 |         }, this.velocidadReloj);
     |         ^
  77 | 
  78 |         
  79 |       
    at Parser.pp$5.raise (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp.expect (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1749:33)
    at Parser.pp$3.parseCallExpressionArguments (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3564:12)
    at Parser.pp$3.parseSubscripts (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3533:31)
    at Parser.pp$3.parseExprSubscripts (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3504:15)
    at Parser.pp$3.parseMaybeUnary (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
2019-08-07T20:17:11.904Z - info: Only the prefab node "touchPointNotificacion" and its child nodes are saved.
2019-08-07T20:17:12.136Z - info: Only the prefab node "touchPointNotificacion" and its child nodes are saved.
2019-08-07T20:17:12.488Z - info: Only the prefab node "touchPointNotificacion" and its child nodes are saved.
2019-08-07T20:17:15.250Z - info: Only the prefab node "touchPointNotificacion" and its child nodes are saved.
